--- a/_includes/video/pb-cp-kl.html
+++ b/_includes/video/pb-cp-kl.html
@@ -62,8 +62,9 @@ function OptanonWrapper() { }
     <script src="{{site.baseurl}}/assets/js/main.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/pbjs_home.js"></script>
     
+    
     <!--production version of prebid.js-->
-    <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
+    <!--<script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>-->
     
     <!--kaltura & prebid js code-->
     <script type="text/javascript">
