--- a/_includes/video/pb-cp-vjs.html
+++ b/_includes/video/pb-cp-vjs.html
@@ -63,7 +63,7 @@ function OptanonWrapper() { }
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/pbjs_home.js"></script>
     
     <!--production version of prebid.js-->
-    <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
+    <!--<script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>-->
     
     <!--videojs & prebid js code-->
     <!-- use recent version of videojs to ensure proper functioning with the iOS devices -->
