--- a/_includes/adops/adops-gam-video-setup.html
+++ b/_includes/adops/adops-gam-video-setup.html
@@ -20,32 +20,35 @@
 
 <h2 id="line-item-setup">Line Item Setup</h2>
 
-<ul>
-  <li>
-    <p>In the <strong>New line item</strong> dialog, under <strong>Inventory sizes</strong>, select the <strong>Video VAST</strong> radio button.</p>
-  </li>
-  <li>
-    <p>In the <strong>Master</strong> text area, add your video player size(s).</p>
-  </li>
-</ul>
+<ol>
+  <li>In the <b>New line item</b> dialog, choose "Video"</li>
+  <li>Select the appropriate Line Item Type, etc.</li>
+  <li>In the <b>Expected creatives</b> section, choose your video size. e.g. 640x480v.</li>
+  <li>Set the dates, rate, limit, and targeting as desired. e.g for <a href="/dev-docs/publisher-api-reference.html#setConfig-Send-All-Bids">SendAllBids</a> include targeting for "hb_bidder_rubicon=rubicon" as well as the hb_pb_rubicon targeting. This isn't needed if only creating one set of orders for all bidders.</li>
+  <li>Remember to set the hb_pb=BUCKET targeting for each line item. Or hb_pb_BIDDER=BUCKET if using separate line items for each bidder.</li>
+  <li>Save the line item</li>
+</ol>
 
-<p><img src="/assets/images/ad-ops/dfp-creative-setup/dfp-creative-setup-03.png" alt="Google Ad Manager New Line Item" class="pb-md-img" /></p>
+<p class="alert alert-warning">By default, Prebid.js caps all CPMs at $20.  As a video seller, you may expect to see CPMs higher than $20.  In order to receive those bids, you’ll need to make sure your dev team implements custom price buckets as described in the <a href="/dev-docs/show-video-with-a-dfp-video-tag.html">engineering setup instructions</a>.  Once those changes are made on the engineering side, there should be no changes required from the ad ops side to support CPMs over $20.</p>
 
-<p>Other line item settings and key/value targeting are the same as <a href="/adops/step-by-step.html#step-1-add-a-line-item">those recommended for Prebid display</a>, with one exception:</p>
-
-<ul>
-  <li>By default, Prebid.js caps all CPMs at $20.  As a video seller, you may expect to see CPMs higher than $20.  In order to receive those bids, you’ll need to make sure your dev team implements custom price buckets as described in the <a href="/dev-docs/show-video-with-a-dfp-video-tag.html">engineering setup instructions</a>.  Once those changes are made on the engineering side, there should be no changes required from the ad ops side to support CPMs over $20.</li>
-</ul>
-
-<p class="alert alert-success">Be sure to duplicate your line item and video creative for each Prebid price bucket you intend to create. You may also need separate video line items for each cache service being used. For example, if both AppNexus and Rubicon Project are bidders, you’ll need separate line items to support the different cache URLs required.</p>
+<p class="alert alert-success">Be sure to duplicate your line item and video creative for each Prebid price bucket you intend to create. You may also want separate video line items for each cache service being used. For example, if both AppNexus and Rubicon Project are bidders, you’ll either need separate line items to support the different cache URLs required or separately-targeted creatives as described below.</p>
 
 <h2 id="creative-setup">Creative Setup</h2>
 
-<p>1. For each line item you created above, select <strong>new creative set</strong>.</p>
+When setting up video creatives, it's important to understand where the VAST XML is stored for each of your bidders. The most common place to store VAST XML is AppNexus' cache, but some bidders (e.g. RubiconProject and SpotX) use their own cache services. To support such
+bidders, you will need to either have:
+<ul>
+<li>separate line items for each bidder</li>
+<li>or a creative for each cache service utilized by your implementation.</li>
+</ul>
 
-<p>2. In the dialog that appears, set the <strong>creative set type</strong> to <strong>“Redirect”</strong></p>
+<h3 id="creative-single-cache">Creative Setup for a Single Cache Location</h3>
 
-<p>3. Set the <strong>VAST tag URL</strong> to the cache location. Note that each bidder, e.g. Rubicon Project, may have a different cache location URL.</p>
+<p>1. For each line item you create, click on the <b>Creatives</b> tab, the <b>ADD CREATIVE</b> button, and choose the size you're entering.</p>
+
+<p>2. In the dialog that appears, choose <b>Redirect</b></p>
+
+<p>3. Set the <b>VAST tag URL</b> to the cache location.
 
 <p>If you’re using a single order for all bidders, then the VAST URL will be the same for each bidder:</p>
 
@@ -53,25 +56,55 @@
 or
    [other bidder cache location]</code></pre></figure>
 
-<p>If you’re using different orders for each bidder, the VAST URL for each will need to be different:</p>
+<p>If you’re using different orders for each bidder, the VAST URL for each will include the bidder-specific targeting variable:</p>
 
 <figure class="highlight"><pre><code class="language-html" data-lang="html">   https://prebid.adnxs.com/pbc/v1/cache?uuid=%%PATTERN:hb_uuid_BIDDERCODE%%
 or
    [other bidder cache location]</code></pre></figure>
 
-<p class="alert alert-warning">This VAST tag URL is <strong>required</strong> in order to show video ads.  It points to
-   a server-side cache hosted by your Prebid Server provider.</p>
+<p class="alert alert-warning">This VAST tag URL is <b>required</b> in order to show video ads. It points to a server-side cache hosted by your Prebid Server provider.</p>
 
 <p class="alert alert-info"><strong>Prebid Cache and the VAST creative URL warning</strong><br />
    Google Ad Manager will show you a warning that fetching VAST from the creative
    URL failed.  This is expected, since the creative URL above points
    to a server-side asset cache hosted by Prebid Server.</p>
 
-<p>4. Set the <strong>duration</strong> to <strong>1</strong></p>
+<p>4. Set the <b>Duration</b> to <b>1</b></p>
 
 <p>The resulting creative should look something like the following:</p>
 
-<p><img src="/assets/images/ad-ops/dfp-creative-setup/dfp-creative-setup-04.png" alt="Google Ad Manager Video Creative Setup" class="pb-md-img" /></p>
+<p><img src="/assets/images/ad-ops/dfp-creative-setup/appnexus_vast_tag.png" alt="Google Ad Manager Video Creative Setup"/></p>
+
+<h3 id="creative-multiple-cache">Creative Setup for a Multiple Cache Locations</h3>
+
+To set up multiple video creatives in the same line item (i.e. to run AppNexus, Rubicon, and SpotX all together in the same video line item), you can utilize creative targeting.
+<br/>
+<br/>
+<p>
+1. In the Line Item's <b>Expected creatives</b> box, choose <b>Creative Targeting</b> and "Add New Targeting".
+
+<p>
+2. Give the targeting set a name like "Prebid Default Video Cache URL" and set <b>Custom Targeting</b> to appropriate. e.g. "hb_bidder is none of rubicon, spotx". Save the targeting.
+
+<p>
+3. For each bidder that uses their own cache, click <b>ADD SIZE</b> in the "Expected creatives" section. Again, choose <b>Creative Targeting</b> and "Add New Targeting".
+
+<p>
+4. Give the targeting a name like "Prebid Rubicon Video Cache URL". Set <b>Custom Targeting</b> appropriately. e.g. "hb_bidder is any of rubicon". Save the targeting.
+
+<p>
+5. Save the line item
+
+<p>
+6. Now with the targeting defined, we're going to add the creatives. Go to the Line Item's <b>Creatives</b> tab
+
+<p>
+7. Make one creative for each of the targets. There are a couple of ways of doing this on the GAM UI, but each approach will result in a creative entry screen similar to the screenshot above for the "Single Cache Location" process. Enter a name (e.g. "AppNexus VAST tag") and the VAST URL as described above.
+
+<p>
+8. The end result should look something like this:
+
+<p><img src="/assets/images/ad-ops/dfp-creative-setup/video_creatives_final.png" alt="Google Ad Manager Video Creative Setup" /></p>
 
 <p>That’s it as far as Prebid setup is concerned.  At this point you can add any other options you would normally use, e.g., labels or tracking URLs.</p>
 
